fix 3 boxes gap problem

--- a/halpes-nextjs-main/src/styles/halpes-responsive.css
+++ b/halpes-nextjs-main/src/styles/halpes-responsive.css
@@ -499,6 +499,20 @@
     justify-content: center;
     flex-direction: column;
   }
+
+  .three-boxes .row {
+    display: flex;
+    align-items: stretch;
+  }
+  
+  .three-boxes .col-xl-4 {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .three-boxes__single {
+    height: 100%;
+  }
 }
 
 /* Mobile Layout: 320px. */
@@ -1172,6 +1186,7 @@
 @media only screen and (min-width: 1200px) and (max-width: 1500px) {
   .three-boxes__single {
     padding: 60px 25px 60px;
+    height: 100%;
   }
 
   .three-boxes__text-box h2 {
